--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ p {
 
 a,
 .btn {
-  transition: all 300ms ease;
+  transition: all 300s ease;
 }
 
 /* Desktop Nav */
@@ -38,7 +38,6 @@ nav {
   align-items: center;
   height: 17vh;
 }
-
 .nav-links {
   gap: 2rem;
   list-style: none;
@@ -137,6 +136,20 @@ a {
 
 .hamburger-icon span:first-child {
   transform: none;
+}
+
+/*Sections*/
+
+section {
+  padding-top: 4vh;
+  height: 96vh;
+  margin: 0 10rem;
+  box-sizing: border-box;
+  min-height: fit-content;
+}
+
+.section-container {
+  display: flex;
 }
 
 /* Profile Section */
