--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ section {
   text-align: center;
 }
 
-#social-container {
+#socials-container {
   display: flex;
   justify-content: center;
   margin-top: 1rem;
@@ -205,7 +205,7 @@ section {
   height: 2rem;
 }
 
-/* Button */
+/* Buttons */
 
 .btn-container {
   display: flex;
@@ -370,4 +370,24 @@ article .icon {
 .project-btn {
   color: black;
   border-color: rgb(163, 163, 163);
+}
+
+/* Contact */
+
+#contact {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 70vh;
+}
+
+.contact-info-upper-container {
+  display: flex;
+  justify-content: center;
+  border-radius: 2rem;
+  border: rgb(163, 163, 163) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  background: (25, 250, 250);
+  margin: 2rem;
+  padding: 0.5rem;
 }
