--- a/style.css
+++ b/style.css
@@ -391,3 +391,23 @@ article .icon {
   margin: 2rem;
   padding: 0.5rem;
 }
+
+.contact-info-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  margin: 1rem;
+}
+
+.contact-info-container p {
+  font-size: larger;
+}
+
+.contact-icon {
+  cursor: default;
+}
+
+.email-icon {
+  height: 2.5rem;
+}
