--- a/style.css
+++ b/style.css
@@ -411,3 +411,14 @@ article .icon {
 .email-icon {
   height: 2.5rem;
 }
+
+/* Footer Section */
+
+footer {
+  height: 26vh;
+  margin: 0 1 rem;
+}
+
+footer p {
+  text-align: center;
+}
