--- a/style.css
+++ b/style.css
@@ -377,6 +377,7 @@ article .icon {
 #contact {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-direction: column;
   height: 70vh;
 }
