--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -2,7 +2,6 @@
   #desktop-nav {
     display: none;
   }
-
   #hamburger-nav {
     display: flex;
   }
@@ -36,6 +35,6 @@
 .color-container {
   display: flex;
   flex-direction: column;
-  align-items center;
+  align-items: center;
 }
 
