--- a/style.css
+++ b/style.css
@@ -350,27 +350,45 @@ article .icon {
 
 #projects {
   text-align: center;
-  position: relative;
 }
 
+/* Project Card */
 .color-container {
-  border-color: rgb(163, 163, 163);
+  border: 1px solid rgb(163, 163, 163);
   background: rgb(250, 250, 250);
+  border-radius: 2rem;
+  padding: 1.5rem;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
+/* Image Wrapper */
+.article-container {
+  width: 100%
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Project Image */
 .project-img {
   border-radius: 2rem;
   width: 100%
+  max-width: 305px;
   height: auto
   display: block;
   margin: 0 auto; /* centers the image */
 }
 
+/* Title */
 .project-title {
-  margin: 1rem;
+  margin: 1rem 0;
   color: black;
 }
 
+/* Button */
 .project-btn {
   color: black;
   border-color: rgb(163, 163, 163);
