--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,10 +1,13 @@
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1200px) {
   #desktop-nav {
     display: none;
   }
+
   #hamburger-nav {
     display: flex;
   }
+}
+
   #experience,
   .experience-details-container {
     margin-top: 2rem;
