--- a/style.css
+++ b/style.css
@@ -230,7 +230,7 @@ section {
 
 .btn-color-1,
 .btn-color-2 {
-  border: rgb(53, 53, 53) 0.1rem solid;
+  border: rgb(53,53,53) 0.1rem solid;
 }
 
 .btn-color-1:hover,
@@ -240,12 +240,12 @@ section {
 
 .btn-color-1,
 .btn-color-2:hover {
-  background: rgb(0, 0, 0);
+  background: rgb(0,0,0);
   color: white;
 }
 
 .btn-color-1:hover {
-  background: rgb(0, 0, 0);
+  background: rgb(0,0,0);
 }
 
 .btn-color-2 {
