--- a/style.css
+++ b/style.css
@@ -358,43 +358,22 @@ article .icon {
   position: relative;
 }
 
-/* Project Card */
 .color-container {
   border: 1px solid rgb(163, 163, 163);
   background: rgb(250, 250, 250);
+}
+
+ .project-img {
   border-radius: 2rem;
-  padding: 1.5rem;
+  width: 90%;
+  height: 90%;
+ }
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-/* Image Wrapper */
-.article-container {
-  width: 100%
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/* Project Image */
-.project-img {
-  border-radius: 2rem;
-  width: 100%
-  max-width: 305px;
-  height: auto
-  display: block;
-  margin: 0 auto; /* centers the image */
-}
-
-/* Title */
 .project-title {
   margin: 1rem 0;
   color: black;
 }
 
-/* Button */
 .project-btn {
   color: black;
   border-color: rgb(163, 163, 163);
@@ -405,7 +384,6 @@ article .icon {
 #contact {
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-direction: column;
   height: 70vh;
 }
