--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,13 +1,20 @@
 @media screen and (max-width: 1200px) {
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
   #desktop-nav {
     display: none;
   }
-
   #hamburger-nav {
     display: flex;
   }
-}
-
   #experience,
   .experience-details-container {
     margin-top: 2rem;
@@ -35,9 +42,6 @@
     margin-top: 0;
   }
 }
-.color-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
 
+@media screen and (max-width: 600px) {
+}
